# PostDisaster-Ai-Agentic-Alert-System

./: .gitignore  Cities.docx  PostDisaster_System.ipynb  README.md  how2run.txt  howtorun.txt  main_api.py  package-lock.json  postdisaster_system.py  pyproject.toml  requirements.txt  satellite.py
backend/: main_api.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/public/: frontend_test.html
frontend/scripts/: setup-frontend.bat  setup-frontend.sh
frontend/src/: App.jsx  index.css
frontend/src/components/: AnalysisResults.jsx  CityGallery.jsx  DocumentViewer.jsx  ImageUpload.jsx
frontend/src/services/: api.js
